--- a/ProjectSourceCode/map_page.html
+++ b/ProjectSourceCode/map_page.html
@@ -7,6 +7,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-light">
@@ -31,13 +32,7 @@
   <main class="container my-3">
     <h2 class="mb-2">Fishing Locations Map</h2>
     
-    <div class="map-container">
-      <img 
-        src="../assets/map_example.png" 
-        alt="Fishing Locations Map" 
-        class="map-image"
-      />
-    </div>
+    <div id="map" class="map-container"></div>
     
     <div class="row mt-3">
       <div class="col-12">
@@ -71,5 +66,7 @@
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="map.js"></script>
 </body>
 </html>
