--- a/ProjectSourceCode/dashboard.html
+++ b/ProjectSourceCode/dashboard.html
@@ -25,7 +25,7 @@
           <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
         </div>
       </div>
-      <a href="/login" class="btn btn-outline-light">Login</a>
+      <a href="login.html" class="btn btn-outline-light">Login</a>
     </div>
   </header>
 
