--- a/ProjectSourceCode/upload.html
+++ b/ProjectSourceCode/upload.html
@@ -41,9 +41,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    
-
-    </main>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
@@ -97,8 +95,33 @@
         simulateAI(e.target.dataset.id);
       }
     });
-    
-  </script>
 
+    // Handle form submission
+    document.getElementById("uploadForm").addEventListener("submit", async (e) => {
+      e.preventDefault(); // Prevent default form submission
+
+      const form = e.target;
+      const formData = new FormData(form); // Collect form data
+
+      try {
+        const response = await fetch("https://your-server-endpoint/upload", {
+          method: "POST",
+          body: formData,
+        });
+
+        if (response.ok) {
+          const result = await response.json();
+          alert("Post uploaded successfully!");
+          console.log(result); // Handle the server response
+        } else {
+          alert("Failed to upload post. Please try again.");
+          console.error("Error:", response.statusText);
+        }
+      } catch (error) {
+        alert("An error occurred while uploading the post.");
+        console.error("Error:", error);
+      }
+    });
+  </script>
 </body>
 </html>
