--- a/ProjectSourceCode/upload.html
+++ b/ProjectSourceCode/upload.html
@@ -32,94 +32,34 @@
     <h2>Upload a Post!</h2>
     <form id="uploadForm" class="mb-4">
         <div class="mb-3">
-            <label for="fileInput" class="form-label">Upload Image</label>
-            <input type="file" class="form-control" id="fileInput" accept="image/*" required>
+            <label for="imageInput" class="form-label">Upload Image</label>
+            <input type="file" class="form-control" id="imageInput" name="image" accept="image/*" required>
         </div>
         <div class="mb-3">
-            <label for="detailsInput" class="form-label">Details</label>
-            <textarea class="form-control" id="detailsInput" rows="3" required></textarea>
+            <label for="captionInput" class="form-label">Caption</label>
+            <textarea class="form-control" id="captionInput" name="caption" rows="3" placeholder="Write a caption for your post..."></textarea>
+        </div>
+        <div class="mb-3">
+            <label for="xCoordInput" class="form-label">X Coordinate (Optional)</label>
+            <input type="number" step="any" class="form-control" id="xCoordInput" name="x_coord" placeholder="e.g., 40.7128">
+        </div>
+        <div class="mb-3">
+            <label for="yCoordInput" class="form-label">Y Coordinate (Optional)</label>
+            <input type="number" step="any" class="form-control" id="yCoordInput" name="y_coord" placeholder="e.g., -74.0060">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="auth.js"></script>
+  <script src="upload.js"></script>
   <script>
-    const postGrid = document.getElementById("postGrid");
-
-    // Function to render a card and its corresponding modal
-    function addPost(id, title, imageLabel, details) {
-      const card = `
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="card text-center">
-            <button class="btn p-0" data-bs-toggle="modal" data-bs-target="#modal${id}">
-              <div class="card-body">${imageLabel}</div>
-            </button>
-            <div class="card-footer">Details</div>
-          </div>
-        </div>
-
-        <div class="modal fade" id="modal${id}" tabindex="-1" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered modal-lg">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title">${title}</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-              </div>
-              <div class="modal-body text-center">
-                <div class="mb-3 border p-3">${imageLabel}</div>
-                <ul class="list-unstyled text-start">
-                  ${details.map(d => `<li>${d}</li>`).join('')}
-                </ul>
-                <button class="btn btn-primary ai-btn mt-2" data-id="${id}">Analyze with AI</button>
-                <div id="aiResult${id}" class="mt-3 text-start"></div>
-              </div>
-            </div>
-          </div>
-        </div>`;
-      postGrid.insertAdjacentHTML("beforeend", card);
-    }
-
-    // Simple AI simulation
-    function simulateAI(id) {
-      const r = document.getElementById("aiResult" + id);
-      r.innerHTML = "<strong>Analyzing...</strong>";
-      setTimeout(() => {
-        r.innerHTML = "<strong>AI Result:</strong> Details";
-      }, 1500);
-    }
-
-    // Event listener for all AI buttons
-    document.addEventListener("click", e => {
-      if (e.target.classList.contains("ai-btn")) {
-        simulateAI(e.target.dataset.id);
-      }
-    });
-
-    // Handle form submission
-    document.getElementById("uploadForm").addEventListener("submit", async (e) => {
-      e.preventDefault(); // Prevent default form submission
-
-      const form = e.target;
-      const formData = new FormData(form); // Collect form data
-
-      try {
-        const response = await fetch("https://your-server-endpoint/upload", {
-          method: "POST",
-          body: formData,
-        });
-
-        if (response.ok) {
-          const result = await response.json();
-          alert("Post uploaded successfully!");
-          console.log(result); // Handle the server response
-        } else {
-          alert("Failed to upload post. Please try again.");
-          console.error("Error:", response.statusText);
-        }
-      } catch (error) {
-        alert("An error occurred while uploading the post.");
-        console.error("Error:", error);
+    // Check authentication on page load
+    window.addEventListener('DOMContentLoaded', async () => {
+      const user = await checkAuth();
+      if (user) {
+        updateNavbarWithUser(user);
       }
     });
   </script>
