--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>FINLOG - home</title>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-light">
