changed the search bar

--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -45,8 +45,7 @@
         <div id="postFeed" class="overflow-auto" style="max-height: 100vh; padding-right: 1rem;">
             <div class="pt-3 pb-2" style="z-index: 1020;">
                   <input type="search"
-                         class="form-control rounded-pill py-2 ms-md-auto w-100 md-w-75"
-                         
+                         class="form-control rounded-pill py-2 search-bar"
                          placeholder="Search for a Place, Space or a type of Fish!">
                   <div class="mt-3 d-flex flex-wrap gap-2 py-6">
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">For you</button>
