Changed a bit of home page button formatting

--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -47,11 +47,12 @@
                   <input type="search"
                          class="form-control rounded-pill py-2 search-bar"
                          placeholder="Search for a Place, Space or a type of Fish!">
-                  <div class="mt-3 d-flex flex-wrap gap-2 py-6">
+                  <div class="search-type">
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">For you</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Recent</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Nearby</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Trending</button>
+                    <button class="btn btn-outline-secondary rounded-pill btn-sm">Size</button>
                   </div>
             </div>
             
