--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -48,11 +48,12 @@
                          class="form-control rounded-pill py-2 search-bar"
                          placeholder="Search for a Place, Space or a type of Fish!">
                   <div class="search-type">
-                    <button class="btn btn-outline-secondary rounded-pill btn-sm">For you</button>
+                    <button class="btn btn-outline-secondary rounded-pill btn-sm active">For you</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Recent</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Nearby</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Trending</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Size</button>
+                    <a href="upload.html" class="btn btn-secondary btn-upload">Upload</a>
                   </div>
             </div>
             
@@ -92,6 +93,8 @@
       </div>
     </div>
   </div>
+  
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
@@ -134,5 +137,6 @@
       }
     });
   </script>
+  <script src="home.js"></script>
 </body>
 </html>
