--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -10,15 +10,12 @@
 
   <header class="p-2 bg-secondary text-white">
     <div class="d-flex justify-content-between align-items-center">
-      <button class="btn btn-outline-light">≡</button>
+      <h1 class="m-0">FINLOG</h1>
       <div class="text-center">
-        <h1 class="m-0">FINLOG</h1>
         <div class="mt-1">
-          <a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
-          <a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
-          <a href="map_page.html" class="btn btn-outline-light btn-sm me-2">Map</a>
-          <a href="upload.html" class="btn btn-outline-light btn-sm me-2">Upload</a>
-          <a href="dashboard.html" class="btn btn-outline-light btn-sm">Dashboard</a>
+        <input type="search"
+                class="form-control rounded-pill py-2 search-bar"
+                placeholder="Search for a Place, Space or a type of Fish!">
         </div>
       </div>
       <a href="login.html" class="btn btn-outline-light">Login</a>
@@ -140,3 +137,11 @@
   <script src="home.js"></script>
 </body>
 </html>
+
+
+<!-->
+<!<a href="home.html" class="btn btn-outline-light btn-sm me-2">Home</a>
+<a href="finlog.html" class="btn btn-outline-light btn-sm me-2">Fish Log</a>
+<a href="map_page.html" class="btn btn-outline-light btn-sm me-2">Map</a>
+<a href="upload.html" class="btn btn-outline-light btn-sm me-2">Upload</a>
+<a href="dashboard.html" class="btn btn-outline-light btn-sm">Dashboard</a>-->
