--- a/ProjectSourceCode/upload.html
+++ b/ProjectSourceCode/upload.html
@@ -40,6 +40,14 @@
             <textarea class="form-control" id="captionInput" name="caption" rows="3" placeholder="Write a caption for your post..."></textarea>
         </div>
         <div class="mb-3">
+            <label for="fishWeightInput" class="form-label">Fish Weight (lbs)</label>
+            <input type="number" step="any" class="form-control" id="fishWeightInput" name="fish_weight" placeholder="e.g., 5.5">
+        </div>
+        <div class="mb-3">
+            <label for="fishSpeciesInput" class="form-label">Fish Species</label>
+            <input type="text" class="form-control" id="fishSpeciesInput" name="fish_species" placeholder="e.g., Rainbow Trout">
+        </div>
+        <div class="mb-3">
             <label for="xCoordInput" class="form-label">X Coordinate (Optional)</label>
             <input type="number" step="any" class="form-control" id="xCoordInput" name="x_coord" placeholder="e.g., 40.7128">
         </div>
