added live comments

--- a/ProjectSourceCode/dashboard.html
+++ b/ProjectSourceCode/dashboard.html
@@ -50,13 +50,13 @@
     <!-- Left Column: FinLog -->
     <div class="col-lg-8">
       <div class="card mb-4">
-        <div class="card-header d-flex justify-content-between align-items-center">
-          <h5 class="mb-0">FinLog</h5>
-          <a href="#upload" class="btn btn-sm btn-secondary">Add New</a>
-        </div>
-        <div class="card-body">
-          <div id="postGrid" class="row g-3"></div>
-        </div>
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <h5 class="mb-0">FinLog</h5>
+        <a href="upload.html" class="btn btn-sm btn-secondary">Add New</a>
+      </div>
+      <div class="card-body">
+        <div id="postGrid" class="row g-3"></div>
+      </div>
       </div>
     </div>
 
