Fixed a couple home page links

--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -34,9 +34,10 @@
         <div class="sticky-top py-4">
             <h5 class="mb-4">FinLog</h5>
             <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">FishLog</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link" href="map_page.html">Map Page</a></li>
+                <li class="nav-item"><a class="nav-link" href="upload.html">Upload</a></li>
             </ul>
         </div>
     </div>
