--- a/ProjectSourceCode/admin-dashboard.html
+++ b/ProjectSourceCode/admin-dashboard.html
@@ -5,18 +5,11 @@
   <title>FINLOG — Admin Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <style>
-    body { background: #f7f7f7; }
-    .admin-badge { background: #dc3545; color: white; padding: 0.25rem 0.5rem; border-radius: 0.25rem; font-size: 0.75rem; }
-    .post-card { border-left: 4px solid #007bff; margin-bottom: 1rem; }
-    .post-card.flagged { border-left-color: #ffc107; background-color: #fff3cd; }
-    .post-card.deleted { border-left-color: #dc3545; opacity: 0.6; }
-    .post-card.approved { border-left-color: #28a745; }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<header class="p-2 bg-danger text-white">
+<header class="p-3 bg-white">
   <div class="d-flex justify-content-between align-items-center">
         <div class="header-left">
             <h1 class="m-0">FINLOG <span class="admin-badge">ADMIN</span></h1>
