--- a/ProjectSourceCode/dashboard.html
+++ b/ProjectSourceCode/dashboard.html
@@ -6,17 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <style>
-    body { background: #f7f7f7; }
-    .map-container { height: 380px; border-radius: .5rem; }
-    .pin-list .pin-item { display:flex; justify-content:space-between; align-items:center; padding:.25rem .5rem; border:1px solid #eee; border-radius:.5rem; margin-bottom:.25rem;}
-    .card img { max-height:220px; object-fit:cover; }
-    .section-anchor { scroll-margin-top: 72px; }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
-<header class="p-2 bg-secondary text-white">
+<header class="p-3 bg-white">
     <div class="d-flex justify-content-between align-items-center">
         <div class="header-left">
             <h1 class="m-0">FINLOG</h1>
@@ -90,7 +84,7 @@
         <div class="card-header"><h5 class="mb-0">Profile</h5></div>
         <div class="card-body text-center">
           <div class="mb-3">
-            <div class="bg-secondary text-white rounded-circle d-inline-flex align-items-center justify-content-center" style="width:80px;height:80px;"><span class="h4 mb-0">FM</span></div>
+            <div class="rounded-circle d-inline-flex align-items-center justify-content-center" style="width:80px;height:80px;"><span class="h4 mb-0 text-white">FM</span></div>
           </div>
           <h5 id="profile-username">FishMaster123</h5>
           <p class="text-muted" id="profile-member-since">Fishing since 2020</p>
@@ -156,7 +150,7 @@ window.addEventListener('DOMContentLoaded', async () => {
 async function loadUserProfile() {
   // Update profile username and initials
   document.getElementById('profile-username').textContent = currentUser.username;
-  document.querySelector('.bg-secondary.text-white.rounded-circle span').textContent = currentUser.username.substring(0, 2).toUpperCase();
+  document.querySelector('.rounded-circle span').textContent = currentUser.username.substring(0, 2).toUpperCase();
 
   try {
     const response = await fetch(`/api/user/stats`);
