--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-light">
 
-  <header class="p-2 bg-secondary text-white">
+  <header class="p-3 bg-white">
     <div class="d-flex justify-content-between align-items-center">
         <div class="header-left">
             <h1 class="m-0">FINLOG</h1>
@@ -57,15 +57,22 @@
                     <a href="upload.html" class="btn btn-secondary btn-upload">Upload</a>
                   </div>
             </div>
-          
+            
+            <div class="text-center py-5">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+              <p class="mt-3">Loading posts...</p>
+            </div>
   
       </div>
     </div>
   </div>
+  </div>
   
   <script src="auth.js"></script>
   <script>
-    // Check if user is logged in and update navbar
+    // Check if user is logged in and update navbar (but don't redirect)
     window.addEventListener('DOMContentLoaded', async () => {
       try {
         const response = await fetch('/api/auth/check');
