--- a/ProjectSourceCode/map_page.html
+++ b/ProjectSourceCode/map_page.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-light">
 
-  <header class="p-2 bg-secondary text-white">
+  <header class="p-3 bg-white">
     <div class="d-flex justify-content-between align-items-center">
         <div class="header-left">
             <h1 class="m-0">FINLOG</h1>
