--- a/ProjectSourceCode/finlog.html
+++ b/ProjectSourceCode/finlog.html
@@ -33,18 +33,27 @@
   
   <div class="container-fluid py-1">
     <div class="row min-vh-100">
-        <div class="col-md-3 d-none d-md-block bg-light">
-        <div class="sticky-top py-4">
-            <h5 class="mb-4">FinLog</h5>
+        <div class="col-md-3 d-none d-md-block bg-light border-end">
+          <div class="sticky-top py-4">
+            <h5 class="mb-4 text-center">FinLog</h5>
             <ul class="nav flex-column">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="map_page.html">Map Page</a></li>
-                <li class="nav-item"><a class="nav-link" href="upload.html">Upload</a></li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="dashboard.html">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="map_page.html">Map Page</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="upload.html">Upload</a>
+                </li>
             </ul>
+          </div>
         </div>
+      </div>
     </div>
-          
           
     <div class="col-md-9">
   
