--- a/ProjectSourceCode/home.html
+++ b/ProjectSourceCode/home.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>FINLOG - home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body class="bg-light">
@@ -51,7 +52,7 @@
                   <div class="search-type">
                     <button class="btn btn-outline-secondary rounded-pill btn-sm active">For you</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Recent</button>
-                    <button class="btn btn-outline-secondary rounded-pill btn-sm">Nearby</button>
+                    <!-- <button class="btn btn-outline-secondary rounded-pill btn-sm">Nearby</button> -->
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Trending</button>
                     <button class="btn btn-outline-secondary rounded-pill btn-sm">Size</button>
                     <a href="upload.html" class="btn btn-secondary btn-upload">Upload</a>
