--- a/ProjectSourceCode/map_page.html
+++ b/ProjectSourceCode/map_page.html
@@ -38,10 +38,10 @@
         <div class="sticky-top py-4">
             <h5 class="mb-4">FinLog</h5>
             <ul class="nav flex-column">
-                <li class="nav-item"><a class="nav-link" href="home.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="dashboard.html">Dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="map_page.html">Map Page</a></li>
-                <li class="nav-item"><a class="nav-link" href="upload.html">Upload</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-primary mb-2 text-start" href="home.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-primary mb-2 text-start" href="dashboard.html">Dashboard</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-outline-primary btn-sm w-100 text-start active mb-2"" href="map_page.html">Map Page</a></li>
+                <li class="nav-item"><a class="nav-link btn btn-primary mb-2 text-start" href="upload.html">Upload</a></li>
             </ul>
         </div>
     </div>
