--- a/ProjectSourceCode/dashboard.html
+++ b/ProjectSourceCode/dashboard.html
@@ -267,6 +267,56 @@ async function loadMapLocations() {
   }
 }
 
+function addPost(id, caption, date, imagePath) {
+  const postGrid = document.getElementById('postGrid');
+  const col = document.createElement('div');
+  col.className = 'col-12 col-md-6';
+
+  col.innerHTML = `
+    <div class="card h-100 post-card">
+      <img src="${imagePath}" class="card-img-top" alt="Post image"
+        style="height: 200px; object-fit: cover;" 
+      />
+      <div class="card-body">
+        <p class="text-muted small mb-2">${new Date(date).toLocaleDateString()}</p>
+        <p class="mb-2">${caption || 'No caption'}</p>
+
+        <!-- DELETE BUTTON -->
+        <button class="btn btn-danger btn-sm delete-post-btn" data-id="${id}">
+          Delete
+        </button>
+      </div>
+    </div>
+  `;
+
+  postGrid.appendChild(col);
+}
+
+
+document.addEventListener("click", async (e) => {
+  // only handle delete button clicks
+  if (!e.target.classList.contains("delete-post-btn")) return;
+
+  const postId = e.target.dataset.id;
+
+  if (!confirm("Are you sure you want to delete this post?")) return;
+
+  const response = await fetch(`/api/user/posts/${postId}`, {
+    method: "DELETE"
+  });
+
+  const result = await response.json();
+
+  if (result.status === "success") {
+    // Remove the post card from the feed
+    const postCard = e.target.closest(".post-card");
+    if (postCard) postCard.remove();
+    alert("Post deleted.");
+  } else {
+    alert("Failed to delete post.");
+  }
+});
+
 loadMapLocations();
 
 // === Stats ===
